# geofluidprop

./: CMakeLists.txt  README.md  _config.yml
.github/workflows/: build_R.yml  build_test.yml
src/interface/: eos-iaps84-prost.c  eos-iaps84-prost.h  eos-if97-freesteam.c  eos-if97-freesteam.h  eos-linear.c  eos-linear.h  eos_type.c  eos_type_impl.c  eos_type_impl.h
src/model/driesner07/: Driesner2007_H2ONaCl.c  Driesner2007_H2ONaCl.h  Driesner2007_NaCl.c  Driesner2007_NaCl.h
src/model/iapws/: IAPWS-IF97.c
wrapper/: CMakeLists.txt
wrapper/swig/: geofluidprop.i
